# kitchen-assistant

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  frontend_plan.md  pyproject.toml  scratch_dump_outputs.py  workplan.md
.gemini/skills/recipe-scaler/: SKILL.md
.gemini/skills/timer-manager/: SKILL.md
.github/workflows/: ci.yml
app/: auth.py  main.py  orchestrator.py  orchestrator_v2.py  requirements.txt  schemas.py  state_manager.py
app/api/: stream.py
app/live/: gateway.py
app/services/: recipe_store.py  stt.py  timer_engine.py  tts.py
app/tools/: cooking_tools.py  registry.py
backend/: models.py  requirements.txt  state_manager.py
data/: recipes.db  recipes_seed.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: pcm-worklet.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActiveTimerBoard.tsx  CameraPreview.tsx  IngredientChecklist.tsx  InstructionCard.tsx  MicButton.tsx  StatusBar.tsx  TranscriptPane.tsx
notebooks/: 01_recipe_eda.ipynb  02_multimodal_practice.ipynb  03_tool_implementation.ipynb  04_app_demo.ipynb  recipes.db
scripts/: ingest_recipes.py  live_smoke.py  setup_vector_search.py  test_vector_search.py  test_voice_streaming.py
static/: app.js  index.html
tests/: conftest.py  test_auth.py  test_cooking_tools.py  test_gateway.py  test_ingest_recipes.py  test_main.py  test_recipe_store.py  test_registry.py  test_state_manager.py  test_timer_engine.py
(+3 files in other folders)
