[tool.poetry]
name = "kitchen-assistant"
version = "0.1.0"
description = ""
authors = ["thompgt"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.136.3"
uvicorn = "^0.48.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
redis = "^8.0.0"
python-dotenv = "^1.2.2"
duckdb = "^1.5.3"
pandas = "^3.0.3"
ipykernel = "^7.2.0"
nbconvert = "^7.17.1"
websockets = "^16.0"
httpx = "^0.28.1"
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
pillow = "^12.2.0"
google-genai = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
